--- a/style.css
+++ b/style.css
@@ -7,3 +7,21 @@ body{
     border-radius: 10px;
     box-shadow: 5px 5px 10px gray;
 }
+#transaction-area{
+    display: none;
+}
+.status{
+    margin: 20px;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+}
+.deposit{
+    background-color: slateblue;
+}
+.withdraw{
+    background-color: lightpink;
+}
+.balcnce{
+    background-color: orange;
+}
